AC-452 fixed buttons to not wrap on desktop. At width of 768px or less buttons will wrap. Added CSS to make wrapped buttons on small screens all have same width and some space between them- wrapping now appears much more intentional or planned.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -86,6 +86,11 @@ hr {
   white-space: nowrap;
 }
 
+th.actions-column,
+td.actions {
+  white-space: nowrap;
+}
+
 .tab-content {
   padding-top: 20px;
 }
@@ -944,4 +949,13 @@ tr td button i {
     table-layout: fixed;
   }
 
+  th.actions-column,
+  td.actions {
+    white-space: normal;
+  }
+
+  td.actions button {
+     width: 75px;
+     margin-bottom: 5px;
+  } 
 }
